name:                enc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/anler/enc#readme
license:             BSD3
license-file:        LICENSE
author:              Anler Hernández Peral
maintainer:          inbox+enc@anler.me
copyright:           2017 Anler Hernández Peral
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Encoding
                     , Encoding.Url
                     , Encoding.Base64
  build-depends:       base >= 4.7 && < 5
                     , HTTP
                     , base64-bytestring
                     , bytestring
                     , unix
                     , transformers

  default-language:    Haskell2010

executable enc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , enc
                     , docopt

  default-language:    Haskell2010

test-suite enc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , enc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/anler/enc
